--- a/src/Pages/CoctailsCard/CoctailInf.css
+++ b/src/Pages/CoctailsCard/CoctailInf.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+
+.coctail__info {
+    overflow: auto;
+    max-height: 630px;
+}
+
 .coctail__info img {
     width: 400px;
 }
