--- a/src/Pages/CoctailsList/CoctailsList.css
+++ b/src/Pages/CoctailsList/CoctailsList.css
@@ -14,6 +14,8 @@
 .search {
     padding: 50px 100px 0 100px;
     display: flex;
+    justify-content: space-between;
+
 }
 
 .search form {
@@ -30,12 +32,17 @@ form input {
 }
 
 .search button {
+    vertical-align: top;
     margin-left: 20px;
     width: 80px;
     height: 40px;
     border-radius: 20px;
     border: 1px solid white;
     background-color: azure;
+}
+
+#search__by__ingred {
+    width: 110px;
 }
 
 .filter{
