edit button, margin and create drop button

--- a/src/Components/Modal.css
+++ b/src/Components/Modal.css
@@ -23,6 +23,7 @@
     padding: 20px;
     border-radius: 12px;
     background-color: #f6decd;
+    background-color: #f7b8ff;
     transform: scale(0.5);
     transition: 0.35s all;
 
