--- a/src/Pages/CoctailsList/CoctailsList.css
+++ b/src/Pages/CoctailsList/CoctailsList.css
@@ -31,7 +31,7 @@ form input {
     padding-left: 20px;
 }
 
-.search button {
+.white__btn {
     vertical-align: top;
     margin-left: 20px;
     width: 80px;
@@ -49,6 +49,7 @@ form input {
     color: black;
     display: flex;
     gap: 30px;
+    margin-bottom: 20px;
 }
 
 .loading__coctails {
@@ -104,4 +105,95 @@ form input {
 .ingred{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
+    margin-bottom: 20px;
+}
+
+.accept__btn {
+    background-color: #9ce9a9;
+    width: 100px;
+    height: 40px;
+    border-radius: 20px;
+    
+}
+
+.accept__btn:hover {
+    box-shadow: 0 0 4px 2px #39e656;
+}
+
+.accept__btn:active {
+    background-color: #69e37e;
+}
+
+.drop__btn {
+    background-color: #e88f8f;
+    width: 100px;
+    height: 40px;
+    border-radius: 20px;
+    margin-left: 40px;
+}
+
+.drop__btn:hover {
+    box-shadow: 0 0 4px 2px #ce4949;
+}
+
+.drop__btn:active {
+    background-color: #e25656;
+}
+
+.checkbox {
+    position: relative;
+}
+
+.custom-checkbox {
+    position: absolute;
+    cursor: pointer;
+    opacity: 0;
+}
+
+.custom-checkbox+label {
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+}
+
+.custom-checkbox+label::before {
+    content: '';
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    flex-shrink: 0;
+    flex-grow: 0;
+    border: 1px solid #adb5bd;
+    border-radius: 0.25em;
+    margin-right: 0.5em;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 50% 50%;
+}
+
+.custom-checkbox:checked+label::before {
+    border-color: #0b76ef;
+    background-color: #0b76ef;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+}
+
+.custom-checkbox:not(:disabled):not(:checked)+label:hover::before {
+    border-color: #b3d7ff;
+}
+
+.custom-checkbox:not(:disabled):active+label::before {
+    background-color: #b3d7ff;
+    border-color: #b3d7ff;
+}
+
+.custom-checkbox:focus+label::before {
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+.custom-checkbox:focus:not(:checked)+label::before {
+    border-color: #80bdff;
+}
+
+.custom-checkbox:disabled+label::before {
+    background-color: #e9ecef;
 }
